Fix default menu spacings on mobile

--- a/assets/scss/components/site-header/_mobile.scss
+++ b/assets/scss/components/site-header/_mobile.scss
@@ -75,7 +75,8 @@
         }
     }
 
-    ul.menu a {
+    ul.menu a,
+    .menu>ul a {
         padding-left: 0;
         padding-right: 0;
     }
