--- a/style.css
+++ b/style.css
@@ -1185,7 +1185,8 @@ ul.menu > .has-submenu-left .children,
       bottom: .7em;
       opacity: 0;
       transition: opacity 0.1s cubic-bezier(0.42, 0, 0.58, 1); }
-    .site-header ul.menu a {
+    .site-header ul.menu a,
+    .site-header .menu > ul a {
       padding-left: 0;
       padding-right: 0; }
     .site-header .menu-item-has-children[class] > a:after,
